src/antlr/TaxSpecParser.js
// Generated from /Users/mitchellmcmillan/projects/income-tax-plotter/TaxSpec.g4 by ANTLR 4.13.2
// jshint ignore: start
import antlr4 from 'antlr4';
import TaxSpecListener from './TaxSpecListener.js';
import TaxSpecVisitor from './TaxSpecVisitor.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class TaxSpecParser extends antlr4.Parser {

    static grammarFileName = "TaxSpec.g4";
    static literalNames = [ null, "'let'", "'eval'", "'fix'", "'T'", "'piece'", 
                            "'bracketsTaxable'", "'brackets'", "'else'", 
                            "'and'", "'or'", "'not'", "'true'", "'false'", 
                            "'inf'", "'_'", "'('", "')'", "'{'", "'}'", 
                            "'['", "']'", "';'", "':'", "','", "'.'", "'..'", 
                            "'^'", "'*'", "'/'", "'+'", "'-'", "'<='", "'<'", 
                            "'>='", "'>'", "'=='", "'!='", "'='" ];
    static symbolicNames = [ null, "LET", "EVAL", "FIX", "TOTAL", "PIECE", 
                             "BRACKETS_TAXABLE", "BRACKETS", "ELSE", "AND", 
                             "OR", "NOT", "TRUE", "FALSE", "INF", "UNDERSCORE", 
                             "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACK", 
                             "RBRACK", "SEMI", "COLON", "COMMA", "DOT", 
                             "DOTDOT", "POW", "MUL", "DIV", "ADD", "SUB", 
                             "LE", "LT", "GE", "GT", "EQEQ", "NEQ", "ASSIGN", 
                             "NUMBER", "STRING", "IDENT", "WS", "LINE_COMMENT", 
                             "BLOCK_COMMENT" ];
    static ruleNames = [ "program", "countryBlock", "countryName", "currencyMeta", 
                         "componentDef", "kindToken", "cell", "wrapper", 
                         "block", "stmt", "expr", "orExpr", "andExpr", "notExpr", 
                         "cmpExpr", "addExpr", "mulExpr", "powExpr", "unaryExpr", 
                         "primary", "evalCall", "fixCall", "refCall", "funcCall", 
                         "nameRef", "pieceExpr", "pieceArm", "scheduleExpr", 
                         "bracketsTaxableExpr", "rangeArm", "range", "bound" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = TaxSpecParser.ruleNames;
        this.literalNames = TaxSpecParser.literalNames;
        this.symbolicNames = TaxSpecParser.symbolicNames;
    }



	program() {
	    let localctx = new ProgramContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, TaxSpecParser.RULE_program);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 67;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===40 || _la===41) {
	            this.state = 64;
	            this.countryBlock();
	            this.state = 69;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 70;
	        this.match(TaxSpecParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	countryBlock() {
	    let localctx = new CountryBlockContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, TaxSpecParser.RULE_countryBlock);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 72;
	        this.countryName();
	        this.state = 74;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===16) {
	            this.state = 73;
	            this.currencyMeta();
	        }

	        this.state = 76;
	        this.match(TaxSpecParser.LBRACE);
	        this.state = 80;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===41) {
	            this.state = 77;
	            this.componentDef();
	            this.state = 82;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 83;
	        this.match(TaxSpecParser.RBRACE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	countryName() {
	    let localctx = new CountryNameContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, TaxSpecParser.RULE_countryName);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 85;
	        _la = this._input.LA(1);
	        if(!(_la===40 || _la===41)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	currencyMeta() {
	    let localctx = new CurrencyMetaContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, TaxSpecParser.RULE_currencyMeta);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 87;
	        this.match(TaxSpecParser.LPAREN);
	        this.state = 99;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 41:
	            this.state = 88;
	            this.match(TaxSpecParser.IDENT);
	            this.state = 93;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===38) {
	                this.state = 89;
	                this.match(TaxSpecParser.ASSIGN);
	                this.state = 90;
	                this.match(TaxSpecParser.NUMBER);
	                this.state = 91;
	                this.match(TaxSpecParser.MUL);
	                this.state = 92;
	                this.match(TaxSpecParser.IDENT);
	            }

	            break;
	        case 39:
	            this.state = 95;
	            this.match(TaxSpecParser.NUMBER);
	            this.state = 96;
	            this.match(TaxSpecParser.IDENT);
	            this.state = 97;
	            this.match(TaxSpecParser.ASSIGN);
	            this.state = 98;
	            this.match(TaxSpecParser.IDENT);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	        this.state = 101;
	        this.match(TaxSpecParser.RPAREN);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	componentDef() {
	    let localctx = new ComponentDefContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, TaxSpecParser.RULE_componentDef);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 103;
	        this.match(TaxSpecParser.IDENT);
	        this.state = 106;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===23) {
	            this.state = 104;
	            this.match(TaxSpecParser.COLON);
	            this.state = 105;
	            this.kindToken();
	        }

	        this.state = 108;
	        this.match(TaxSpecParser.ASSIGN);
	        this.state = 109;
	        this.cell();
	        this.state = 111;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===22) {
	            this.state = 110;
	            this.match(TaxSpecParser.SEMI);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	kindToken() {
	    let localctx = new KindTokenContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, TaxSpecParser.RULE_kindToken);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 113;
	        _la = this._input.LA(1);
	        if(!(_la===15 || _la===41)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	cell() {
	    let localctx = new CellContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, TaxSpecParser.RULE_cell);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 115;
	        this.wrapper();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	wrapper() {
	    let localctx = new WrapperContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, TaxSpecParser.RULE_wrapper);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 117;
	        this.match(TaxSpecParser.LBRACE);
	        this.state = 118;
	        this.block();
	        this.state = 119;
	        this.match(TaxSpecParser.RBRACE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	block() {
	    let localctx = new BlockContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, TaxSpecParser.RULE_block);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 124;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===1) {
	            this.state = 121;
	            this.stmt();
	            this.state = 126;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 127;
	        this.expr();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	stmt() {
	    let localctx = new StmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, TaxSpecParser.RULE_stmt);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 129;
	        this.match(TaxSpecParser.LET);
	        this.state = 130;
	        this.match(TaxSpecParser.IDENT);
	        this.state = 131;
	        this.match(TaxSpecParser.ASSIGN);
	        this.state = 132;
	        this.expr();
	        this.state = 134;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===22) {
	            this.state = 133;
	            this.match(TaxSpecParser.SEMI);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	expr() {
	    let localctx = new ExprContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, TaxSpecParser.RULE_expr);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 136;
	        this.orExpr();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	orExpr() {
	    let localctx = new OrExprContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, TaxSpecParser.RULE_orExpr);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 138;
	        this.andExpr();
	        this.state = 143;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===10) {
	            this.state = 139;
	            this.match(TaxSpecParser.OR);
	            this.state = 140;
	            this.andExpr();
	            this.state = 145;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	andExpr() {
	    let localctx = new AndExprContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, TaxSpecParser.RULE_andExpr);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 146;
	        this.notExpr();
	        this.state = 151;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===9) {
	            this.state = 147;
	            this.match(TaxSpecParser.AND);
	            this.state = 148;
	            this.notExpr();
	            this.state = 153;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	notExpr() {
	    let localctx = new NotExprContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, TaxSpecParser.RULE_notExpr);
	    try {
	        this.state = 157;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 11:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 154;
	            this.match(TaxSpecParser.NOT);
	            this.state = 155;
	            this.notExpr();
	            break;
	        case 2:
	        case 3:
	        case 4:
	        case 5:
	        case 6:
	        case 7:
	        case 12:
	        case 13:
	        case 14:
	        case 16:
	        case 30:
	        case 31:
	        case 39:
	        case 40:
	        case 41:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 156;
	            this.cmpExpr();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	cmpExpr() {
	    let localctx = new CmpExprContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, TaxSpecParser.RULE_cmpExpr);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 159;
	        this.addExpr();
	        this.state = 162;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(((((_la - 32)) & ~0x1f) === 0 && ((1 << (_la - 32)) & 63) !== 0)) {
	            this.state = 160;
	            _la = this._input.LA(1);
	            if(!(((((_la - 32)) & ~0x1f) === 0 && ((1 << (_la - 32)) & 63) !== 0))) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            this.state = 161;
	            this.addExpr();
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	addExpr() {
	    let localctx = new AddExprContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 30, TaxSpecParser.RULE_addExpr);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 164;
	        this.mulExpr();
	        this.state = 169;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,13,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 165;
	                _la = this._input.LA(1);
	                if(!(_la===30 || _la===31)) {
	                this._errHandler.recoverInline(this);
	                }
	                else {
	                	this._errHandler.reportMatch(this);
	                    this.consume();
	                }
	                this.state = 166;
	                this.mulExpr(); 
	            }
	            this.state = 171;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,13,this._ctx);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	mulExpr() {
	    let localctx = new MulExprContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 32, TaxSpecParser.RULE_mulExpr);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 172;
	        this.powExpr();
	        this.state = 177;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===28 || _la===29) {
	            this.state = 173;
	            _la = this._input.LA(1);
	            if(!(_la===28 || _la===29)) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            this.state = 174;
	            this.powExpr();
	            this.state = 179;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	powExpr() {
	    let localctx = new PowExprContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 34, TaxSpecParser.RULE_powExpr);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 180;
	        this.unaryExpr();
	        this.state = 183;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===27) {
	            this.state = 181;
	            this.match(TaxSpecParser.POW);
	            this.state = 182;
	            this.powExpr();
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	unaryExpr() {
	    let localctx = new UnaryExprContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 36, TaxSpecParser.RULE_unaryExpr);
	    var _la = 0;
	    try {
	        this.state = 188;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 30:
	        case 31:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 185;
	            _la = this._input.LA(1);
	            if(!(_la===30 || _la===31)) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            this.state = 186;
	            this.unaryExpr();
	            break;
	        case 2:
	        case 3:
	        case 4:
	        case 5:
	        case 6:
	        case 7:
	        case 12:
	        case 13:
	        case 14:
	        case 16:
	        case 39:
	        case 40:
	        case 41:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 187;
	            this.primary();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	primary() {
	    let localctx = new PrimaryContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 38, TaxSpecParser.RULE_primary);
	    try {
	        this.state = 207;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,17,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 190;
	            this.match(TaxSpecParser.NUMBER);
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 191;
	            this.match(TaxSpecParser.INF);
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 192;
	            this.match(TaxSpecParser.TRUE);
	            break;

	        case 4:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 193;
	            this.match(TaxSpecParser.FALSE);
	            break;

	        case 5:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 194;
	            this.match(TaxSpecParser.IDENT);
	            break;

	        case 6:
	            this.enterOuterAlt(localctx, 6);
	            this.state = 195;
	            this.match(TaxSpecParser.STRING);
	            break;

	        case 7:
	            this.enterOuterAlt(localctx, 7);
	            this.state = 196;
	            this.match(TaxSpecParser.LPAREN);
	            this.state = 197;
	            this.expr();
	            this.state = 198;
	            this.match(TaxSpecParser.RPAREN);
	            break;

	        case 8:
	            this.enterOuterAlt(localctx, 8);
	            this.state = 200;
	            this.evalCall();
	            break;

	        case 9:
	            this.enterOuterAlt(localctx, 9);
	            this.state = 201;
	            this.fixCall();
	            break;

	        case 10:
	            this.enterOuterAlt(localctx, 10);
	            this.state = 202;
	            this.refCall();
	            break;

	        case 11:
	            this.enterOuterAlt(localctx, 11);
	            this.state = 203;
	            this.funcCall();
	            break;

	        case 12:
	            this.enterOuterAlt(localctx, 12);
	            this.state = 204;
	            this.pieceExpr();
	            break;

	        case 13:
	            this.enterOuterAlt(localctx, 13);
	            this.state = 205;
	            this.bracketsTaxableExpr();
	            break;

	        case 14:
	            this.enterOuterAlt(localctx, 14);
	            this.state = 206;
	            this.scheduleExpr();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	evalCall() {
	    let localctx = new EvalCallContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 40, TaxSpecParser.RULE_evalCall);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 209;
	        this.match(TaxSpecParser.EVAL);
	        this.state = 210;
	        this.match(TaxSpecParser.LPAREN);
	        this.state = 211;
	        this.nameRef();
	        this.state = 212;
	        this.match(TaxSpecParser.COMMA);
	        this.state = 213;
	        this.expr();
	        this.state = 214;
	        this.match(TaxSpecParser.RPAREN);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	fixCall() {
	    let localctx = new FixCallContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 42, TaxSpecParser.RULE_fixCall);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 216;
	        this.match(TaxSpecParser.FIX);
	        this.state = 217;
	        this.match(TaxSpecParser.LPAREN);
	        this.state = 218;
	        this.expr();
	        this.state = 219;
	        this.match(TaxSpecParser.COMMA);
	        this.state = 220;
	        this.expr();
	        this.state = 221;
	        this.match(TaxSpecParser.RPAREN);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	refCall() {
	    let localctx = new RefCallContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 44, TaxSpecParser.RULE_refCall);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 223;
	        this.match(TaxSpecParser.TOTAL);
	        this.state = 224;
	        this.match(TaxSpecParser.LPAREN);
	        this.state = 225;
	        this.nameRef();
	        this.state = 226;
	        this.match(TaxSpecParser.RPAREN);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	funcCall() {
	    let localctx = new FuncCallContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 46, TaxSpecParser.RULE_funcCall);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 228;
	        this.match(TaxSpecParser.IDENT);
	        this.state = 229;
	        this.match(TaxSpecParser.LPAREN);
	        this.state = 238;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if((((_la) & ~0x1f) === 0 && ((1 << _la) & 3221321980) !== 0) || ((((_la - 39)) & ~0x1f) === 0 && ((1 << (_la - 39)) & 7) !== 0)) {
	            this.state = 230;
	            this.expr();
	            this.state = 235;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===24) {
	                this.state = 231;
	                this.match(TaxSpecParser.COMMA);
	                this.state = 232;
	                this.expr();
	                this.state = 237;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	        }
